backend/server_minimal.log
/opt/homebrew/lib/python3.13/site-packages/pydantic/_internal/_config.py:373: UserWarning: Valid config keys have changed in V2:
* 'allow_population_by_field_name' has been renamed to 'validate_by_name'
  warnings.warn(message, UserWarning)
/opt/homebrew/lib/python3.13/site-packages/pydantic/_internal/_config.py:373: UserWarning: Valid config keys have changed in V2:
* 'allow_population_by_field_name' has been renamed to 'validate_by_name'
  warnings.warn(message, UserWarning)
⚠️ Schema verification system not available: No module named 'schema_verification'
Deliverable System not fully available: cannot import name 'get_supabase_client' from 'database' (consider renaming '/Users/pelleri/Documents/ai-team-orchestrator/backend/database.py' if it has the same name as a library you intended to import)
Memory or Deliverable System not fully available: cannot import name 'get_supabase_client' from 'database' (consider renaming '/Users/pelleri/Documents/ai-team-orchestrator/backend/database.py' if it has the same name as a library you intended to import)
Traceback (most recent call last):
  File "/Users/pelleri/Documents/ai-team-orchestrator/backend/main.py", line 33, in <module>
    from routes.agents import router as agents_router
  File "/Users/pelleri/Documents/ai-team-orchestrator/backend/routes/agents.py", line 26, in <module>
    from ai_agents.manager import AgentManager
  File "/Users/pelleri/Documents/ai-team-orchestrator/backend/ai_agents/manager.py", line 25, in <module>
    from ai_agents.specialist import SpecialistAgent
  File "/Users/pelleri/Documents/ai-team-orchestrator/backend/ai_agents/specialist.py", line 763
    - DATE: 2024-01-15 | EVENT: Event description | STATUS: completed
                 ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
